// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preubas del componente GifGrid debe de mostrar items cuando se cargan las imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Shingeky No Kyojin
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="cualquier cosa"
      url="https://asdas.com"
    />
  </div>
</Fragment>
`;

exports[`preubas del componente GifGrid debe hacer match con el snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Shingeky No Kyojin
  </h3>
  <div
    className="card-grid"
  />
</Fragment>
`;
